# project-prompt-generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  codecov.yml  prompt_generator.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: api.md  development_steps.md  requirements.md
src/promptgen/: __init__.py  cli.py  exceptions.py  generator.py  gitignore.py  logging.py
tests/: __init__.py  test_api.py  test_cli.py  test_exceptions.py  test_generator.py  test_gitignore.py  test_logging.py
