[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptgen"
version = "0.1.0"
authors = [
    { name = "Masanori Yokoyama", email = "your.email@example.com" },
]
description = "A tool to generate AI prompts from project files"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "pathspec>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "flake8-docstrings>=1.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.3",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Masanori-Yokoyama/project-prompt-generator"
"Bug Tracker" = "https://github.com/Masanori-Yokoyama/project-prompt-generator/issues"

[project.scripts]
promptgen = "promptgen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["promptgen*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
